[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Bear/Bear5.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Bear/Bear1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Bear/Bear3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Bear/Bear7.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Bear/Bear8.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Bear/Bear4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Bear/Bear2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Bear/Bear6.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Bear.gd" type="Script" id=9]
[ext_resource path="res://Sprites/Bear/BearIdle.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 6 )

[sub_resource type="Animation" id=3]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../PushSkin/IdleSkin:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 1.025, 0.975 ), Vector2( 0.975, 1.025 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../PushSkin/IdleSkin/HitSkin:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.7, 1.3 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Push"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../PushSkin:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 0.9 ), Vector2( 1, 1 ) ]
}

[node name="Bear" type="Node2D"]
script = ExtResource( 9 )

[node name="PushSkin" type="Node2D" parent="."]

[node name="IdleSkin" type="Node2D" parent="PushSkin"]
scale = Vector2( 1.025, 0.975 )

[node name="HitSkin" type="Node2D" parent="PushSkin/IdleSkin"]

[node name="BearSprite" type="AnimatedSprite" parent="PushSkin/IdleSkin/HitSkin"]
position = Vector2( 0, -13.3333 )
frames = SubResource( 1 )
animation = "Walk"
frame = 5
playing = true

[node name="DamageArea" type="Area2D" parent="PushSkin/IdleSkin/HitSkin" groups=[
"bears",
]]
position = Vector2( 0, -6.33333 )
collision_layer = 2
collision_mask = 0

[node name="DamageCollision" type="CollisionShape2D" parent="PushSkin/IdleSkin/HitSkin/DamageArea"]
shape = SubResource( 2 )

[node name="Players" type="Node2D" parent="."]

[node name="IdlePlayer" type="AnimationPlayer" parent="Players"]
autoplay = "Idle"
anims/Idle = SubResource( 3 )

[node name="HitPlayer" type="AnimationPlayer" parent="Players"]
anims/Hit = SubResource( 4 )

[node name="PushPlayer" type="AnimationPlayer" parent="Players"]
anims/Push = SubResource( 5 )

[node name="Timers" type="Node2D" parent="."]

[node name="OffWalkTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="WalkTimer" type="Timer" parent="Timers"]
one_shot = true

[connection signal="timeout" from="Timers/OffWalkTimer" to="." method="_on_OffWalkTimer_timeout"]
[connection signal="timeout" from="Timers/WalkTimer" to="." method="_on_WalkTimer_timeout"]
